  sending n messages. New config directive $ActionSendUDPRebindInterval
  added for the purpose. By default, rebinding is disabled. This is 
  considered useful for load balancers.
- bugfix: imdiag/imtcp had a race condition
- improved testbench (now much better code design and reuse)
- added config switch --enable-testbench=no to turn off testbench
---------------------------------------------------------------------------
Version 4.3.1  [DEVEL] (rgerhards), 2009-05-25
- added capability to run multiple tcp listeners (on different ports)
- performance enhancement: imtcp calls parser no longer on input thread
  but rather inside on of the potentially many main msg queue worker
  threads (an enhancement scheduled for all input plugins where this is
  possible)
- added $GenerateConfigGraph configuration command which can be used
  to generate nice-looking (and very informative) rsyslog configuration
  graphs.
- added $ActionName configuration directive (currently only used for
  graph generation, but may find other uses)
- improved doc
  * added (hopefully) easier to grasp queue explanation
- improved testbench
  * added tests for queue disk-only mode (checks disk queue logic)
- bugfix: light and full delay watermarks had invalid values, badly
  affecting performance for delayable inputs
- build system improvements - thanks to Michael Biebl
- added new testing module imdiag, which enables to talk to the 
  rsyslog core at runtime. The current implementation is only a 
  beginning, but can be expanded over time
---------------------------------------------------------------------------
Version 4.3.0  [DEVEL] (rgerhards), 2009-04-17
- new feature: new output plugin omprog, which permits to start program
  and feed it (via its stdin) with syslog messages. If the program
  terminates, it is restarted.
- improved internal handling of RainerScript functions, building the
  necessary plumbing to support more functions with decent runtime